Fixed a bug where previous selected chat messages were visible when new chat messages were loading.

--- a/client/src/components/spinner/spinner.scss
+++ b/client/src/components/spinner/spinner.scss
@@ -2,7 +2,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: lightgray;
   top: 0;
   left: 0;
   display: flex;
